# django-react

./: .actrc  .commitlintrc.json  .gitignore  ExamplePrompts.md  ISSUE_RESOLUTION.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project_organization_plan.md  pyrightconfig.json  security-demo.js
.github/: PROJECT_MANAGEMENT.md  SETUP_INSTRUCTIONS.md
.github/workflows/: ci-cd.yml  (+2 more)
backend/: .flake8  Dockerfile  manage.py  mypy.ini  pyproject.toml  pytest.ini  run_tests.py
backend/customer_management/: _version.py  asgi.py  security_middleware.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/customers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/customers/tests/: __init__.py  test_debug_settings.py  test_models.py  test_security.py  test_serializers.py  test_views.py
config/: logrotate.conf
database/: init.sql
design_docs/: DEVELOPMENT.md  SECURITY-RESOLUTION.md
docs/: GITHUB_ACTIONS_TESTING.md  README.md
e2e-tests/: .github-workflows-e2e.yml  README.md  global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  test.config.js  tsconfig.json
frontend/: .eslintrc.json  .releaserc.json  Dockerfile  README.md  TESTING.md  index.html  jest.config.cjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
scripts/: generate_version.py  setup-dev.ps1  setup-networks.ps1  setup-networks.sh
tests/: README.md  VERIFICATION_RESULTS.md  run-tests.ps1  run-tests.sh
tools/: AUTOMATED_PROJECT_SETUP.txt  README.md  create_github_project.py  create_github_project_maximum_automation.py  create_github_project_v2.py  generate_project_guide.py  github_project_browser_automation.js  setup_wiki.py  wiki_config.toml
(+302 files in other folders)
